assets/main.css
@font-face {
  font-family: 'Open Sans';
  font-style: normal;
  font-weight: 300;
  src: local('Open Sans Light'), local('OpenSans-Light'), url('fonts/Open_Sans/OpenSans-Light.ttf') format('truetype');
}

@font-face {
  font-family: 'Open Sans';
  font-style: normal;
  font-weight: normal;
  src: local('Open Sans'), local('OpenSans'), url('fonts/Open_Sans/OpenSans-Regular.ttf') format('truetype');
}

@font-face {
  font-family: 'Open Sans';
  font-weight: 600;
  src: local('Open Sans SemiBold'), local('OpenSans-SemiBold'),
    url('fonts/Open_Sans/OpenSans-SemiBold.ttf') format('truetype');
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: 'Open Sans', sans-serif;
  font-size: 12px;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  background: url('img/clouds.jpg');
}

.wrapper {
  width: 960px;
  margin: 0 auto;
  overflow: hidden;
}

main {
  flex: 1;
  margin-bottom: 20px;
}

header {
  margin-bottom: 20px;
}

header .top {
  height: 398px;
  background: url('img/header.jpg');
  display: flex;
  align-items: center;
  justify-content: flex-end;
  position: relative;
  box-shadow: 0 2px 1px -1px rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12);
  margin-bottom: 2px;
  text-shadow: 1px 1px rgba(0,0,0,0.4);
  line-height: 55px;
}

header .top .logo {
  height: 230px;
  width: 308px;
  position: absolute;
  left: 90px;
  top: 85px;
}

header .top h1 {
  font-size: 48px;
  color: white;
  font-weight: 600;
  width: 500px;
  text-align: right;
  margin-right: 90px;
}

header .menu .wrapper {
  background: #007faa;
  height: 46px;
  display: flex;
  align-items: center;
  box-shadow: 0 2px 1px -1px rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12);
  opacity: 0.8;
}

header .menu .wrapper a {
  flex: 1;
  color: white;
  text-align: center;
  font-size: 22px;
  text-decoration: none;
  height: 46px;
  line-height: 46px;
  transition: color 0.2s;
}

header .menu .wrapper a:hover {
  color: #a5e3ff;
}

main section {
  height: 400px;
  box-shadow: 0 2px 1px -1px rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12);
  padding: 20px 40px;
  background: white;
}

main section h2 {
  color: #b21818;
  font-size: 32px;
  margin-bottom: 20px;
}

main section .text {
  display: flex;
  align-items: center;
  margin-bottom: 20px;
  color: rgba(0, 0, 0, 0.7);
}

main section .text p {
  padding: 10px 0;
  padding-top: 0;
  text-align: justify;
}

main section .text > :first-child {
  margin-right: 20px;
}

main section .text figure img {
  height: 200px;
  width: 300px;
}

main section figure figcaption {
  color: rgba(0, 0, 0, 0.6);
  text-align: center;
  padding: 5px 0;
}

.paralast {
  height: 200px;
  background: url('images/para.jpg');
  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;

  transform: translateZ(-1px) scale(1.1);
}

.paralast::after {
  content: '';
  position: absolute;
  height: 100%;
  width: 100%;
  background: rgba(0, 127, 172, 0.61);
}

footer {
  background: #007faa;
  color: rgba(255, 255, 255, 0.9);
}

footer nav {
  margin: 0 auto;
  text-align: center;
}

footer nav a {
  display: inline-block;
  padding: 10px;
  margin: 0 10px 20px;
  color: rgba(255, 255, 255, 0.9);
  font-size: 14px;
  text-transform: uppercase;
  text-decoration: none;
}

footer section {
  display: flex;
  justify-content: space-between;
  margin-bottom: 20px;
}

footer section .title {
  text-transform: uppercase;
}

footer .info > div {
  line-height: 20px;
}

footer .contacts {
  text-align: right;
}

footer .ads {
  display: inline-flex;
}

footer .ads img {
  margin-left: 3px;
}

footer .copyrights {
  align-items: flex-end;
}

